# SecLint

./: LICENSE  README.md  pyproject.toml
src/headerhawk/: __init__.py  cli.py  scanner.py
tests/: test_scanner.py
