[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "seclint"
version = "0.1.0"
description = "A tiny defensive CLI for checking TLS details and HTTP security headers."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "HeaderHawk Contributors" }
]
keywords = ["security", "headers", "tls", "https", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Security",
  "Topic :: Internet :: WWW/HTTP"
]

[project.scripts]
headerhawk = "headerhawk.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
